--- a/website/docs/api/options/important.mdx
+++ b/website/docs/api/options/important.mdx
@@ -4,33 +4,63 @@ sidebar_label: ✅ 重要配置
 sidebar_position: 1
 ---
 
+import { OptionCard, OptionDetails, OptionTable } from '@site/src/components/docs/OptionCards'
+
 定义于: [packages/weapp-tailwindcss/src/types/user-defined-options/index.ts:13](https://github.com/sonofmagic/weapp-tailwindcss/blob/59073fec6f66bb3fbd1d15468f6e89437dc3f862/packages/weapp-tailwindcss/src/types/user-defined-options/index.ts#L13)
 
 本页收录 17 个配置项，来源于 `UserDefinedOptions`。
 
 ## 配置一览
 
+<OptionDetails title="配置一览">
+
+<OptionTable>
+
 | 配置项 | 类型 | 默认值 | 说明 |
 | --- | --- | --- | --- |
-| [disabled](#disabled) | <code>boolean &#124; DisabledOptions</code> | <code>false</code> | 是否禁用此插件。 |
-| [customAttributes](#customattributes) | <code>ICustomAttributes</code> | <code>{}</code> | 自定义 `wxml` 标签属性的转换规则。 |
-| [customReplaceDictionary](#customreplacedictionary) | <code>Record<string, string></code> | <code>MappingChars2String</code> | 自定义 class 名称的替换字典。 |
-| [ignoreTaggedTemplateExpressionIdentifiers](#ignoretaggedtemplateexpressionidentifiers) | <code>(string &#124; RegExp)[]</code> | <code>['weappTwIgnore']</code> | 忽略指定标签模板表达式中的标识符。 |
-| [ignoreCallExpressionIdentifiers](#ignorecallexpressionidentifiers) | <code>(string &#124; RegExp)[]</code> | <code>[]</code> | 忽略指定调用表达式中的标识符。 |
-| [cssPreflight](#csspreflight) | <code>CssPreflightOptions</code> | <code>内置预设</code> | 控制在视图节点上注入的 CSS 预设。 |
-| [cssPreflightRange](#csspreflightrange) | <code>"all"</code> | <code>undefined</code> | 控制 `cssPreflight` 注入的 DOM 选择器范围。 |
-| [cssCalc](#csscalc) | <code>boolean &#124; (string &#124; RegExp)[] &#124; CssCalcOptions</code> | <code>false</code> | 预计算 CSS 变量或 `calc` 表达式的结果。 |
-| [injectAdditionalCssVarScope](#injectadditionalcssvarscope) | <code>boolean</code> | <code>false</code> | 是否额外注入 `tailwindcss css var scope`。 |
-| [rewriteCssImports](#rewritecssimports) | <code>boolean</code> | <code>true</code> | 是否在 webpack/vite 阶段自动把 CSS 中的 `@import 'tailwindcss'` 映射为 `weapp-tailwindcss`。 |
-| [cssSelectorReplacement](#cssselectorreplacement) | <code>{ root?: string &#124; string[] &#124; false; universal?: string &#124; string[] &#124; false; }</code> | <code>内置替换表</code> | 控制 CSS 选择器的替换规则。 |
-| [rem2rpx](#rem2rpx) | <code>boolean &#124; Rem2rpxOptions</code> | <code>false</code> | rem 到 rpx 的转换配置。 |
-| [px2rpx](#px2rpx) | <code>boolean &#124; Px2rpxOptions</code> | <code>false</code> | px 到 rpx 的转换配置。 |
-| [unitsToPx](#unitstopx) | <code>boolean &#124; UnitsToPxOptions</code> | <code>false</code> | 多单位转 px 的转换配置。 |
-| [cssPresetEnv](#csspresetenv) | <code>PresetEnvOptions</code> | <code>内置默认配置</code> | `postcss-preset-env` 的配置项。 |
-| [tailwindcss](#tailwindcss) | <code>TailwindUserOptions</code> | <code>undefined</code> | 为不同版本的 Tailwind 配置行为。 |
-| [cssEntries](#cssentries) | <code>string[]</code> | <code>undefined</code> | 指定 tailwindcss@4 的入口 CSS。 |
+| [disabled](#disabled) | `boolean \| DisabledOptions` | `false` | 是否禁用此插件。 |
+| [customAttributes](#customattributes) | `ICustomAttributes` | `{}` | 自定义 `wxml` 标签属性的转换规则。 |
+| [customReplaceDictionary](#customreplacedictionary) | `Record<string, string>` | `MappingChars2String` | 自定义 class 名称的替换字典。 |
+| [ignoreTaggedTemplateExpressionIdentifiers](#ignoretaggedtemplateexpressionidentifiers) | `(string \| RegExp)[]` | `['weappTwIgnore']` | 忽略指定标签模板表达式中的标识符。 |
+| [ignoreCallExpressionIdentifiers](#ignorecallexpressionidentifiers) | `(string \| RegExp)[]` | `[]` | 忽略指定调用表达式中的标识符。 |
+| [cssPreflight](#csspreflight) | `CssPreflightOptions` | `内置预设` | 控制在视图节点上注入的 CSS 预设。 |
+| [cssPreflightRange](#csspreflightrange) | `"all"` | `undefined` | 控制 `cssPreflight` 注入的 DOM 选择器范围。 |
+| [cssCalc](#csscalc) | `boolean \| (string \| RegExp)[] \| CssCalcOptions` | `false` | 预计算 CSS 变量或 `calc` 表达式的结果。 |
+| [injectAdditionalCssVarScope](#injectadditionalcssvarscope) | `boolean` | `false` | 是否额外注入 `tailwindcss css var scope`。 |
+| [rewriteCssImports](#rewritecssimports) | `boolean` | `true` | 是否在 webpack/vite 阶段自动把 CSS 中的 `@import 'tailwindcss'` 映射为 `weapp-tailwindcss`。 |
+| [cssSelectorReplacement](#cssselectorreplacement) | `{ root?: string \| string[] \| false; universal?: string \| string[] \| false; }` | `内置替换表` | 控制 CSS 选择器的替换规则。 |
+| [rem2rpx](#rem2rpx) | `boolean \| Rem2rpxOptions` | `false` | rem 到 rpx 的转换配置。 |
+| [px2rpx](#px2rpx) | `boolean \| Px2rpxOptions` | `false` | px 到 rpx 的转换配置。 |
+| [unitsToPx](#unitstopx) | `boolean \| UnitsToPxOptions` | `false` | 多单位转 px 的转换配置。 |
+| [cssPresetEnv](#csspresetenv) | `PresetEnvOptions` | `内置默认配置` | `postcss-preset-env` 的配置项。 |
+| [tailwindcss](#tailwindcss) | `TailwindUserOptions` | `undefined` | 为不同版本的 Tailwind 配置行为。 |
+| [cssEntries](#cssentries) | `string[]` | `undefined` | 指定 tailwindcss@4 的入口 CSS。 |
+
+
+</OptionTable>
+</OptionDetails>
+
+## 常用配置模板
+
+<OptionDetails title="常用配置模板（Vite）">
+```ts
+import { UnifiedViteWeappTailwindcssPlugin as uvtw } from 'weapp-tailwindcss/vite'
+
+uvtw({
+  cssCalc: true,
+  px2rpx: true,
+  cssSelectorReplacement: {
+    root: ['page', '.tw-root', 'wx-root-portal-content'],
+    universal: ['view', 'text'],
+  },
+})
+```
+
+</OptionDetails>
 
 ## 详细说明
+
+<OptionCard>
 
 ### disabled
 
@@ -40,6 +70,7 @@ sidebar_position: 1
 
 是否禁用此插件。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 备注
 
 在多平台构建场景下常用：小程序构建保持默认，非小程序环境（H5、App）传入 `true` 即可跳过转换。
@@ -66,6 +97,10 @@ uvtw({
   disabled,
 })
 ```
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
 
 ### customAttributes
 
@@ -75,6 +110,7 @@ uvtw({
 
 自定义 `wxml` 标签属性的转换规则。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 备注
 
 默认会转换所有标签上的 `class` 与 `hover-class`。此配置允许通过 `Map` 或对象为特定标签指定需要转换的属性字符串或正则表达式数组。
@@ -103,6 +139,11 @@ uvtw({
 })
 ```
 
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
+
 ### customReplaceDictionary
 
 > 可选 | 类型: `Record<string, string>` | 默认值: `MappingChars2String`
@@ -111,6 +152,7 @@ uvtw({
 
 自定义 class 名称的替换字典。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 备注
 
 默认策略会将小程序不允许的字符映射为等长度的替代字符串，因此无法通过结果反推出原始类名。如需完全自定义，可传入 `Record<string, string>`，只需确保生成的类名不会与已有样式冲突。示例参考 [dic.ts](https://github.com/sonofmagic/weapp-core/blob/main/packages/escape/src/dic.ts)。
@@ -134,6 +176,11 @@ uvtw({
 })
 ```
 
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
+
 ### ignoreTaggedTemplateExpressionIdentifiers
 
 > 可选 | 类型: `(string | RegExp)[]` | 默认值: `['weappTwIgnore']` | 版本: ^4.0.0
@@ -142,6 +189,7 @@ uvtw({
 
 忽略指定标签模板表达式中的标识符。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 备注
 
 当模板字符串被这些标识符包裹时，将跳过转义处理。
@@ -162,6 +210,11 @@ uvtw({
 })
 ```
 
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
+
 ### ignoreCallExpressionIdentifiers
 
 > 可选 | 类型: `(string | RegExp)[]` | 版本: ^4.0.0
@@ -170,6 +223,7 @@ uvtw({
 
 忽略指定调用表达式中的标识符。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 备注
 
 使用这些方法包裹的模板字符串或字符串字面量会跳过转义，常与 `@weapp-tailwindcss/merge` 配合（如 `['twMerge', 'twJoin', 'cva']`）。
@@ -190,6 +244,11 @@ uvtw({
 })
 ```
 
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
+
 ### cssPreflight
 
 > 可选 | 类型: `CssPreflightOptions`
@@ -198,6 +257,7 @@ uvtw({
 
 控制在视图节点上注入的 CSS 预设。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 参阅
 
 https://github.com/sonofmagic/weapp-tailwindcss/issues/7
@@ -232,6 +292,10 @@ uvtw({
   },
 })
 ```
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
 
 ### cssPreflightRange
 
@@ -241,6 +305,7 @@ uvtw({
 
 控制 `cssPreflight` 注入的 DOM 选择器范围。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 参阅
 
 https://github.com/sonofmagic/weapp-tailwindcss/pull/62
@@ -265,6 +330,11 @@ uvtw({
 })
 ```
 
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
+
 ### cssCalc
 
 > 可选 | 类型: `boolean | (string | RegExp)[] | CssCalcOptions` | 版本: ^4.3.0
@@ -273,6 +343,7 @@ uvtw({
 
 预计算 CSS 变量或 `calc` 表达式的结果。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 备注
 
 解决部分机型对 `calc` 计算不一致的问题，可传入布尔值、选项对象或自定义匹配列表（支持正则）。在启用计算后，可通过 `includeCustomProperties` 指定需要保留的变量。
@@ -318,6 +389,10 @@ uvtw({
   },
 })
 ```
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
 
 ### injectAdditionalCssVarScope
 
@@ -327,6 +402,7 @@ uvtw({
 
 是否额外注入 `tailwindcss css var scope`。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 备注
 
 当构建链路（例如 `@tarojs/plugin-html`）移除了包含 `*` 的选择器时，可启用该选项重新写入变量作用域，以避免渐变等功能失效。
@@ -347,6 +423,11 @@ uvtw({
 })
 ```
 
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
+
 ### rewriteCssImports
 
 > 可选 | 类型: `boolean` | 默认值: `true`
@@ -355,6 +436,7 @@ uvtw({
 
 是否在 webpack/vite 阶段自动把 CSS 中的 `@import 'tailwindcss'` 映射为 `weapp-tailwindcss`。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 备注
 
 开启后打包链路只会在处理样式时拦截 `tailwindcss` 的导入路径（JS/TS `import 'tailwindcss'` 不会被修改），让源码可以继续写 `@import 'tailwindcss';`，同时输出 weapp-tailwindcss 的样式。传入 `false` 可完全关闭该行为。
@@ -375,6 +457,11 @@ uvtw({
 })
 ```
 
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
+
 ### cssSelectorReplacement
 
 > 可选 | 类型: `{ root?: string | string[] | false; universal?: string | string[] | false; }` | 默认值: 详见下方
@@ -383,6 +470,7 @@ uvtw({
 
 控制 CSS 选择器的替换规则。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 默认值
 
 ```ts
@@ -430,6 +518,10 @@ uvtw({
   },
 })
 ```
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
 
 ### rem2rpx
 
@@ -439,6 +531,7 @@ uvtw({
 
 rem 到 rpx 的转换配置。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 备注
 
 传入 `true` 使用默认配置，或提供 [postcss-rem-to-responsive-pixel](https://www.npmjs.com/package/postcss-rem-to-responsive-pixel) 支持的完整选项。
@@ -465,6 +558,10 @@ uvtw({
   rem2rpx: true,
 })
 ```
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
 
 ### px2rpx
 
@@ -474,6 +571,7 @@ uvtw({
 
 px 到 rpx 的转换配置。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 备注
 
 传入 `true` 启用默认映射（`1px = 1rpx`），或通过对象自定义更多行为。
@@ -498,6 +596,10 @@ uvtw({
   },
 })
 ```
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
 
 ### unitsToPx
 
@@ -507,6 +609,7 @@ uvtw({
 
 多单位转 px 的转换配置。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 备注
 
 传入 `true` 启用默认映射（`postcss-units-to-px` 的默认单位表），或通过对象自定义行为。默认关闭。
@@ -545,6 +648,10 @@ new UnifiedWebpackPluginV5({
   },
 })
 ```
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
 
 ### cssPresetEnv
 
@@ -554,6 +661,7 @@ new UnifiedWebpackPluginV5({
 
 `postcss-preset-env` 的配置项。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 参阅
 
 - https://preset-env.cssdb.org/
@@ -600,6 +708,11 @@ uvtw({
 })
 ```
 
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
+
 ### tailwindcss
 
 > 可选 | 类型: `TailwindUserOptions` | 版本: ^4.0.0
@@ -608,6 +721,7 @@ uvtw({
 
 为不同版本的 Tailwind 配置行为。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 备注
 
 适用于需要明确指定 Tailwind 版本、配置文件路径或自定义解析行为的场景，一般情况下无需手动配置。
@@ -631,6 +745,11 @@ uvtw({
 })
 ```
 
+</OptionDetails>
+</OptionCard>
+
+<OptionCard>
+
 ### cssEntries
 
 > 可选 | 类型: `string[]` | 版本: ^4.2.6
@@ -639,6 +758,7 @@ uvtw({
 
 指定 tailwindcss@4 的入口 CSS。
 
+<OptionDetails title="默认值 / 说明 / 示例">
 #### 备注
 
 未配置时无法加载自定义插件，等价于设置 `tailwindcss.v4.cssEntries`。
@@ -658,3 +778,7 @@ uvtw({
   cssEntries: ['src/tailwind.css'],
 })
 ```
+
+</OptionDetails>
+</OptionCard>
+
