--- a/website/docs/api/options/important.mdx
+++ b/website/docs/api/options/important.mdx
@@ -181,7 +181,7 @@ uvtw({
 
 <OptionCard>
 
-### ignoreTaggedTemplateExpressionIdentifiers
+### ignoreTaggedTemplateExpression&#8203;Identifiers
 
 > 可选 | 类型: `(string | RegExp)[]` | 默认值: `['weappTwIgnore']` | 版本: ^4.0.0
 
@@ -781,4 +781,3 @@ uvtw({
 
 </OptionDetails>
 </OptionCard>
-
